--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>Projeto redes sociais</title>
 </head>
 <body>
-    <h1>Olá, mundo</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
